--- a/lp-temp/index.html
+++ b/lp-temp/index.html
@@ -61,19 +61,19 @@
 <div class="container center">
 <div class="row">
     <div class="col span-4">
-		<img src="img/product.jpg" alt="ここに商品">
-		<h3>ここに商品が入ります</h3>
-		<p>ここに説明文が入ります</p>
+		<img src="img/logo.png" alt="aa">
+		<h3>イベント</h3>
+		<p>詳細</p>
     </div>
     <div class="col span-4">
-		<img src="img/product.jpg" alt="ここに商品">
-		<h3>ここに商品が入ります</h3>
-		<p>ここに説明文が入ります</p>
+		<img src="img/logo.png" alt="aa">
+		<h3>イベント</h3>
+		<p>詳細</p>
     </div>
     <div class="col span-4">
-		<img src="img/product.jpg" alt="ここに商品">
-		<h3>ここに商品が入ります</h3>
-		<p>ここに説明文が入ります</p>
+		<img src="img/logo.png" alt="aa">
+		<h3>イベント</h3>
+		<p>詳細</p>
     </div>
     </div>
     <br>
