--- a/lp-temp/index.html
+++ b/lp-temp/index.html
@@ -24,7 +24,7 @@
         <h1><a href="">uvent</a></h1>
         
     <!-- ページ遷移追加！！ -->
-    <div class="header-box1"><a href=""><span class="contact-button">新規登録</span></a></div>
+    <div class="header-box1"><a href="user_registration.html"><span class="contact-button">新規登録</span></a></div>
     <div class="header-box2"><a href=""><span class="contact-button">ログイン</span></a></div>
         </div>
     </div>
@@ -36,7 +36,7 @@
             <div id="navi">
         <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="#1">商品について</a></li>
+            <li><a href="post.html">商品について</a></li>
             <li><a href="#2">お客様の声</a></li>
             <li><a href="#3">申し込みの流れ</a></li>
             <li><a href="#4">アクセス</a></li>
@@ -170,7 +170,7 @@
       <th><label for="name">お名前</label></th>
       <td><input class="full-width" type="text" name="お名前" placeholder="名前を記入" id="exampNameInput"></td>
     </tr>
-	<tr>
+	  <tr>
       <th><label for="email">メールアドレス</label></th>
       <td><input class="full-width" type="email" name="Email" placeholder="メールアドレスを記入" id="exampleEmailInput"></td>
     </tr>
