--- a/lp-temp/index.html
+++ b/lp-temp/index.html
@@ -24,8 +24,8 @@
         <h1><a href="">uvent</a></h1>
         
     <!-- ページ遷移追加！！ -->
-    <div class="header-box1"><a href="user_registration.html"><span class="contact-button">新規登録</span></a></div>
-    <div class="header-box2"><a href=""><span class="contact-button">ログイン</span></a></div>
+    <div class="header-box1"><a href="signup.html"><span class="contact-button">新規登録</span></a></div>
+    <div class="header-box2"><a href="signin.html"><span class="contact-button">ログイン</span></a></div>
         </div>
     </div>
 <div class="row">
@@ -80,7 +80,7 @@
     </div>
     <br>
     <div class="button_plus">
-      <a href="#">イベントをもっと見る</a>
+      <a href="event_all.html">イベントをもっと見る</a>
     </div>
 	</div>
 </section>
