--- a/lp-temp/event_all.html
+++ b/lp-temp/event_all.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" media="all" href="css/post.css" />
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
+<script src="js/event_all.js"></script>
 	
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="img/logo.png">
@@ -31,7 +32,7 @@
     <section>
             <h2 class="center"><span class="under">イベント一覧</span></h2>
 
-            
+
     </section>
 </main>
 
